Add CJ by code and date service
