# src/main/webapp/swagger-ui/swagger-rmes.yaml
@@ -79,6 +79,49 @@ paths:
           description: L'en-tête HTTP 'Accept' contient une valeur non acceptée
         '500':
           description: Erreur interne du serveur
+  '/codes/cj':
+    get:
+      tags:
+        - nomenclatures
+      summary: >-
+        Informations sur une catégorie juridique identifiée par son code
+        et une date
+      operationId: getcj
+      parameters:
+        - name: code
+          in: query
+          description: Code de la catégorie juridique
+          required: true
+          schema:
+            type: string
+        - name: date
+          in: query
+          description: >-
+            Date à laquelle la catégorie juridique est active (Format : 'yyyy/MM/dd' ;
+            '' pour la date du jour ; '*' pour ne pas fixer de date)
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoriesJuridiques'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/CategoriesJuridiques'
+        '400':
+          description: La syntaxe de la requête est incorrecte
+        '401':
+          description: Une authentification est nécessaire pour accéder à la ressource
+        '404':
+          description: Ressource non trouvée
+        '406':
+          description: L'en-tête HTTP 'Accept' contient une valeur non acceptée
+        '500':
+          description: Erreur interne du serveur
   '/codes/na73/groupe/{code}':
     get:
       tags:
@@ -252,7 +295,7 @@ paths:
     get:
       tags:
         - nomenclatures
-      summary: Informations sur une activité identifiée par son code
+      summary: Informations sur une activité identifiée par son code et une date
       operationId: getactivities
       parameters:
         - name: code
@@ -499,6 +542,45 @@ components:
           example: Autorité administrative ou publique indépendante
           xml:
             name: Intitule
+    CategorieJuridique:
+      type: object
+      description: Objet représentant une catégorie juridique
+      xml:
+        name: CategorieJuridique
+      properties:
+        code:
+          type: string
+          example: 1100
+          xml:
+            attribute: true
+        uri:
+          type: string
+          example: 'http://id.insee.fr/codes/cj/niveauIII/1100/1973'
+          xml:
+            attribute: true
+        intitule:
+          type: string
+          example: Entrepreneur individuel
+          xml:
+            name: Intitule
+        dateDebutValidite:
+          type: date-time
+          example: '1973-01-01T00:00:00.000+01:00'
+          xml:
+            name: DateDebutValidite
+        dateFinValidite:
+          type: date-time
+          example: '2018-06-30T23:59:59.999+01:00'
+          xml:
+            name: DateFinValidite
+    CategoriesJuridiques:
+      type: array
+      description: Tableau représentant des catégories juridiques
+      items:
+        $ref: '#/components/schemas/CategorieJuridique'
+      xml:
+        wrapped: true
+        name: CategoriesJuridiques
     GroupeNA1973:
       type: object
       description: Objet représentant un groupe de la NA 1973
